<resources>
    <string name="app_name">File Manager AI</string>


    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="title_menu_1">Global Standard Industry Curriculum</string>
    <string name="title_menu_2">Learn Flexibly on Your Schedule</string>
    <string name="title_menu_3">Code Review from Developer Experts</string>
    <string name="title_menu_4">Trusted Alumni in Various Companies</string>
    <string name="desc_menu_1">Curriculum developed in collaboration with global industry leaders and technology owners to meet the latest industry needs.</string>
    <string name="desc_menu_2">Learn anytime, anywhere, at your own pace. Choose classes based on your interests. Access to classes and discussion forums for a lifetime after graduation.</string>
    <string name="desc_menu_3">Validate your skills through 1-on-1 Professional Code Review provided directly by Developer Experts.</string>
    <string name="desc_menu_4">Certificates that prove fundamental knowledge and real skills desired by global companies.</string>
    <string name="learn_now">Start Learning</string>

    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Effortless Organization, Seamless Access. Your World, Your Way.</string>
    <string name="title_welcome_page">Welcome to File Manager AI!</string>
    <string name="title_signup_page">Please complete your information below</string>
    <string name="message_login_page">Please enter your data</string>
    <string name="title_login_page">Ready to Manage Your File?</string>
    <string name="username">User Name</string>
    <string name="message_main_page">Share your story with StoryApp.</string>
    <string name="logout">Log Out</string>
    <string name="language">Language</string>

    <string name="greeting">Hi %1$s,</string>
    <string name="app_title">File Manager AI</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload Photo</string>
    <string name="gallery">Gallery</string>
    <string name="description_here">Description Here</string>

    <string name="yes">Yes, Correct</string>
    <string name="empty_image_warning">Please fill in the photo first</string>
    <string name="password_strict">Use a minimum of 8 letters</string>
    <string name="incorrect_format">Incorrect format</string>
    <string name="error">Failed!</string>
    <string name="success">Success!</string>
    <string name="signup_success">Your account with the name %s is already available. Let share our stories!</string>
    <string name="detail_story_image">Detail Story Image</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="map">Map</string>
    <string name="close">Close</string>
    <string name="gettingData">Getting data</string>
    <string name="successLoc">Succes getting data</string>
    <string name="location_is_not_found_try_again">Location not found. Try Again</string>
    <string name="include_current_location">Include Current Location</string>

    <string name="retry">Retry</string>

    <string name="folders_name">Folders Name</string>
    <string-array name="folder_name">
        <item>Document</item>
        <item>Music</item>
        <item>Others</item>
        <item>Picture</item>
        <item>Video</item>
    </string-array>

    <string name="file_name">File Name</string>

    <integer-array name="folder_photo">
        <item>@drawable/image_folder</item>
        <item>@drawable/image_folder</item>
        <item>@drawable/image_folder</item>
        <item>@drawable/image_folder</item>
        <item>@drawable/image_folder</item>
    </integer-array>

    <string name="document">Documents</string>
    <string name="music">Musics</string>
    <string name="others">Others</string>
    <string name="picture">Pictures</string>
    <string name="video">Videos</string>

</resources>